--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Muli" />
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Poppins" />
+  <link rel="stylesheet" href="https://use.typekit.net/xyi5sve.css">
+  <link rel="stylesheet" href="https://use.typekit.net/uik6lww.css">
 </head>
 <body>
   <app-root></app-root>
